--- a/client-app/src/index.css
+++ b/client-app/src/index.css
@@ -1,4 +1,11 @@
+*, *::before, *::after{
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
 body {
+  box-sizing: border-box;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,12 +18,47 @@ body {
   flex-direction: column;
 }
 
+html{
+  font: 62.5%;/* 1rem = 10px (default) */
+
+  /* COLORS */
+  --color-primary: #4267B2;
+  --color-primary-light: #83a8f1;
+
+  --color-grey-light: #F5F5F5;
+  --color-grey: #f4f0ec;
+
+  /* Shadows */
+  --shadow-medium:rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  --shadow-dark: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  --shadow-darker: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;;
+}
+
 #root{
   flex: 1;
   display: flex;
   flex-direction: column;
 
 }
+
+/* Globals */
+button{
+  transition: all .25s ease-out;
+  border: 0;
+  background: transparent;
+  cursor: pointer;
+}
+
+button:hover, button:focus{
+  border: 0;
+  outline: 0;
+}
+
+button:disabled{
+  cursor: pointer;
+  pointer-events: none;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
