--- a/client-app/src/components/option/Option.module.css
+++ b/client-app/src/components/option/Option.module.css
@@ -11,12 +11,27 @@
     padding: 0 2rem;
 }
 
+.optionBox.disabled{
+    pointer-events: none;
+}
+
+.optionBox.selected.wrong{
+    background-color: var(--color-fail);
+    border: 1px solid currentColor;
+
+}
+
+.optionBox.selected.right{
+    background-color: var(--color-success);
+    border: 1px solid currentColor;
+}
 
 .optionBox:hover{
     background-color: var(--color-primary-light);
     color: #FFF;
     border: 1px solid var(--color-primary-light);
 }
+
 .optionBox.selected{
     background-color: var(--color-primary);
     pointer-events: none;
