--- a/client-app/src/screens/quiz/QuizScreen.module.css
+++ b/client-app/src/screens/quiz/QuizScreen.module.css
@@ -26,12 +26,14 @@
 }
 
 .container > .bottom > button{
-    padding: .5rem 1.2rem;
+    width: 12rem;
+    height: 4rem;
     border: 1px solid var(--color-grey);
     background-color: #FFF;
     color: var(--color-primary);
     font-size: 1.5rem;
     border-radius: 20rem;
+    text-transform: capitalize;
 }
 
 .container > .bottom > button:hover{
