Finishing basic requirements

--- a/client-app/src/components/progress-bar/ProgressBar.module.css
+++ b/client-app/src/components/progress-bar/ProgressBar.module.css
@@ -1,10 +1,11 @@
 .container{
-    height: 2rem;
+    height: 1rem;
     width: 90%;
     background-color: var(--color-grey);
     border-radius: 5rem;
     margin-left: 2rem;
     overflow: hidden;
+    margin-top: 2rem;
 }
 
 .progress{
@@ -20,6 +21,7 @@
 
 .label{
     padding: .5rem;
+    font-size: .8rem;
     color: #FFF;
     font-weight: bold;
     margin-left: auto;
