--- a/client-app/src/screens/quiz/QuizScreen.module.css
+++ b/client-app/src/screens/quiz/QuizScreen.module.css
@@ -18,7 +18,6 @@
 }
 
 .container > .bottom{
-    margin-top: 1rem;
     display: flex;
     justify-content: space-between;
     padding: 0 5rem;
@@ -46,4 +45,14 @@
     background-color: var(--color-grey);
     color: #FFF;
 
+}
+
+.counter{
+    justify-self: flex-end;
+    margin-right: 8rem;
+    font-size: 1.5rem;
+}
+
+.counter.danger{
+    color: var(--color-fail);
 }
